--- a/style.css
+++ b/style.css
@@ -1,5 +1,61 @@
+p {
+    font-family: Roboto, Arial;
+    margin-top: 0px;
+    margin-bottom: 0px;
+}
+
 .thumbnail1 {
     width: 300px;
     display: block;
 }
 
+.searchBar {
+    display: block;
+}
+
+.video-preview {
+    display: inline-block;
+    margin-right: 15px;
+    vertical-align: top;
+}
+
+.title {
+    margin-top: 0px;
+    font-size: 14px;
+    font-weight: 500;
+    line-height: 20px;
+    margin-bottom: 12px;
+}
+
+.author,.stats {
+    font-size: 12px;
+    color: rgb(96,96,96);
+}
+
+.author {
+    margin-bottom: 4px;
+}
+
+.video-preview2 {
+    display: inline-block;
+}
+
+.channelpicture {
+    display: inline-block;
+    width: 50px;
+    vertical-align: top;
+}
+
+.videoInfo {
+    display: inline-block;
+    width: 200px;
+}
+
+.profile-picture {
+    width: 40px;
+    border-radius: 50px;
+}
+
+.thumbnail-row {
+    margin-bottom: 12px;
+}
