--- a/style.css
+++ b/style.css
@@ -4,12 +4,37 @@ p {
     margin-bottom: 0px;
 }
 
-.thumbnail1 {
-    width: 100%;
+body {
+    margin: 0;
 }
 
-.searchBar {
-    display: block;
+.header {
+    height: 55px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.left-section {
+    background-color: lightblue;
+    width: 150px;
+}
+
+.middle-section {
+    flex: 1;
+    background-color: pink;
+    margin-left: 70px;
+    margin-right: 35px;
+    max-width: 500px;
+}
+
+.right-section {
+    background-color: lightblue;
+    width: 150px;
+}
+
+.thumbnail1 {
+    width: 100%;
 }
 
 .title {
