--- a/style.css
+++ b/style.css
@@ -16,21 +16,102 @@ body {
 }
 
 .left-section {
-    background-color: lightblue;
-    width: 150px;
+    display: flex;
+    align-items: center;
+}
+
+.hamburger-menu {
+    height: 24px;
+    margin-left: 24px;
+    margin-right: 24px;
+}
+
+.youtube-logo {
+    height: 20px;
 }
 
 .middle-section {
     flex: 1;
-    background-color: pink;
     margin-left: 70px;
     margin-right: 35px;
     max-width: 500px;
+    display: flex;
+    align-items: center;
+}
+
+.search-button {
+    height: 39px;
+    width: 66px;
+    background-color: rgb(240,240,240);
+    border-width: 1px;
+    border-style: solid;
+    border-color: rgb(192,192,192);
+    margin-right: 10px;
+}
+
+.voice-search-button {
+    height: 40px;
+    width: 40px;
+    border-radius: 20px;
+    border: none;
+    background-color: rgb(248,248,248);
+}
+
+.voice-icon {
+    height: 24px;
+}
+
+.searchBar {
+    flex: 1;
+    height: 36px;
+    padding-left: 10px;
+    font-size: 16px;
+    border-width: 1px;
+    border-style: solid;
+    border-color: rgb(192,192,192);
+    border-radius: 2px;
+    box-shadow: inset 1px 2px 3px rgba(0,0,0,0.05);
+    width: 0;
+}
+
+.search-icon {
+    height: 25px;
+    margin-top: 4px;
+}
+
+.searchBar::placeholder {
+    font-family: Roboto, Arial;
+    font-size: 16px;
 }
 
 .right-section {
-    background-color: lightblue;
-    width: 150px;
+    width: 180px;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    margin-right: 20px;
+    flex-shrink: 0;
+}
+
+.upload-icon {
+    height: 25px;
+    width: 25px;
+}
+
+.ytApps-icon {
+    height: 25px;
+    width: 25px;
+}
+
+.notif-icon {
+    height: 25px;
+    width: 25px;
+}
+
+.channel-icon {
+    height: 32px;
+    width: 32px;
+    border-radius: 16px;
 }
 
 .thumbnail1 {
