--- a/style.css
+++ b/style.css
@@ -23,6 +23,7 @@ body {
     border-bottom-width: 1px;
     border-style: solid;
     border-color: rgb(240,240,240);
+    z-index: 100;
 }
 
 .sidebar {
@@ -127,6 +128,23 @@ body {
     width: 25px;
 }
 
+.notif-div {
+    position: relative;
+    display: inline-block; 
+}
+
+.notif-count {
+    position: absolute;
+    top: -4px;   /* move above the icon */
+    right: -4px; /* move to the right edge */
+    background-color: red;
+    color: white;
+    font-family: Roboto, Arial;
+    font-size: 11px;
+    padding: 2px 5px;
+    border-radius: 10px;
+}
+
 .channel-icon {
     height: 32px;
     width: 32px;
@@ -165,6 +183,7 @@ body {
 
 .thumbnail-row {
     margin-bottom: 12px;
+    position: relative;
 }
 
 .video-info-grid {
@@ -177,5 +196,24 @@ body {
     grid-template-columns: 1fr 1fr 1fr;
     column-gap: 16px;
     row-gap: 40px;
+}
+
+.video-time {
+    font-family: Roboto, Arial;
+    font-size: 12px;
+    font-weight: 500;
+    padding-left: 4px;
+    padding-right: 4px;
+    padding-top: 4px;
+    padding-bottom: 4px;
+    background-color: black;
+    color: white;
+    position: absolute;
+    right: 5px;
+    bottom: 8px;
+    border-style: solid;
+    border-width: 1px;
+    border-color: black;
+    border-radius: 4px;
 }
 
